Add BPLS Pay Code external references
